--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,5 @@
+
+            
 # This is a basic workflow to help you get started with Actions
 
 name: CI to Docker Hub
@@ -33,6 +35,14 @@ jobs:
 #           echo Add other actions to build,
 #           echo test, and deploy your project.
 
+      - name: Cache Docker layers
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+            
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
